# voice2text

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh  voice2text.py
